# fermi_hubbard

./: README.md  one_dimensional.ipynb  pyproject.toml  square.ipynb  superlattice.ipynb  utils.py
dqmc/: 1d-2.ipynb  1d.ipynb
ferromagnetism/: tasaki.ipynb
lieb/: gaussian_destructive_1d.ipynb  hubbard.ipynb
lieb/archive/: chain.ipynb  delta_fn.ipynb  dispersion.ipynb  gaussian_destructive.ipynb  gaussian_destructive_opt.ipynb  gaussian_test.ipynb  plots.ipynb  square.ipynb  superlattice_opt.ipynb
triangular/: chain.ipynb  superlattice.ipynb  superlattice_opt.ipynb
