[tool.poetry]
name = "fermi-hubbard"
version = "0.1.0"
description = ""
authors = ["Areeq Hasan <areeq.i.hasan@gmail.com>"]
readme = "README.md"
packages = [{ include = "fermi_hubbard" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ipykernel = "^6.23.1"
matplotlib = "^3.7.1"
ipympl = "^0.9.3"
plotly = "^5.14.1"
nbformat = "^5.9.0"
numba = "^0.57.0"
scipy = "^1.10.1"
pandas = "^2.0.2"
cython = "^0.29.35"
tensorflow-metal = "^1.0.1"
tensorflow = "2.13.0-rc1"
tensorflow-macos = "^2.12.0"
networkx = "^3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
